--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -40,7 +40,7 @@
 					<tr data-th-field="${order.pizza}">
 						<td>
 							<div>
-								<img src="images/Bella.png" class="pizza">
+								<img src="/images/Bella.png" class="pizza">
 							</div>
 							<div>
 								<input type="radio"  name ="pizza"  value="bella"> Bella
